--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="app_background_color">#000D21</color>
+    <color name="blue_color">#D8E7FF</color>
+    <color name="gray_color">#6F6F6F</color>
+    <color name="btn_color">#DCDCDC</color>
 </resources>
