--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,4 +21,26 @@
         <item name="postSplashScreenTheme">@style/Theme.Mwobwa</item>
         <item name="windowSplashScreenAnimationDuration">5000</item>
     </style>
+
+    <style name="ColorTextStyle">
+        <item name="android:textStyle">bold</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="android:textColor">@color/blue_color</item>
+        <item name="android:fontFamily">@font/jua</item>
+    </style>
+
+    <style name="BlackTextStyle">
+        <item name="android:textStyle">bold</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:fontFamily">@font/jua</item>
+    </style>
+
+    <style name="BtnTextStyle">
+        <item name="android:textStyle">bold</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="android:textColor">@color/btn_color</item>
+    </style>
+
+
 </resources>
