--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -7,6 +7,12 @@
     android:orientation="vertical"
     android:background="@color/app_background_color">
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@color/white"
+        app:layout_constraintTop_toTopOf="parent"/>
+
     <TextView
         android:id="@+id/item_company_text"
         android:layout_width="70dp"
@@ -24,34 +30,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="장르"
-        android:textSize="20sp"
+        android:textSize="15sp"
         android:textAppearance="@style/ColorTextStyle"
-        app:layout_constraintStart_toEndOf="@id/item_company_text"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"/>
-
-    <Spinner
-        android:id="@+id/item_genre_spinner"
-        android:layout_width="100dp"
-        android:layout_height="20dp"
-        android:background="@drawable/bg_spinner_white_round_10dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/item_genre_text"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"/>
 
     <TextView
         android:id="@+id/item_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="제목"
-        android:textSize="20sp"
+        android:textSize="15sp"
         android:textAppearance="@style/ColorTextStyle"
         android:gravity="center"
         app:layout_constraintTop_toBottomOf="@id/bottom_guideline"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"/>
 
     <LinearLayout
@@ -66,8 +61,8 @@
 
         <ImageView
             android:id="@+id/item_plus"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="20sp"
+            android:layout_height="20dp"
             android:src="@drawable/plus_icon"/>
 
         <TextView
@@ -75,7 +70,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="찜하기"
-            android:textSize="20sp"
+            android:textSize="15sp"
             android:textAppearance="@style/ColorTextStyle" />
 
         <TextView
@@ -83,7 +78,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="평점 : 98%"
-            android:textSize="20sp"
+            android:textSize="15sp"
             android:textAppearance="@style/ColorTextStyle"
             android:layout_marginLeft="30dp"
             android:layout_weight="1"/>
@@ -93,14 +88,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="200명 참가"
-            android:textSize="20sp"
+            android:textSize="15sp"
             android:textAppearance="@style/ColorTextStyle"
             android:layout_weight="1"/>
 
     </LinearLayout>
-
-
-
 
     <TextView
         android:id="@+id/item_story_text"
@@ -126,6 +118,7 @@
         app:layout_constraintTop_toBottomOf="@id/item_story_text"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"/>
+
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/bottom_guideline"
