[refactor] review -> saved 변경에 의한 수정

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,17 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/homeFragment"
-        android:title="홈 화면"
+        android:title="홈"
         android:icon="@drawable/home_icon" />
 
     <item
         android:id="@+id/searchFragment"
-        android:title="검색 화면"
+        android:title="검색"
         android:icon="@drawable/search_icon"/>
 
     <item
         android:id="@+id/reviewFragment"
-        android:title="리뷰 화면"
+        android:title="찜하기"
         android:icon="@drawable/review_icon"/>
 
 </menu>
