--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -17,8 +17,8 @@
         tools:layout="@layout/fragment_search" />
     <fragment
         android:id="@+id/reviewFragment"
-        android:name="com.bongku.mwobwa.ui.review.ReviewFragment"
+        android:name="com.bongku.mwobwa.ui.review.SavedFragment"
         android:label="fragment_review"
-        tools:layout="@layout/fragment_review" />
+        tools:layout="@layout/fragment_saved" />
 
 </navigation>
