--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,24 +7,11 @@
     android:background="@color/app_background_color"
     tools:context=".ui.home.HomeFragment">
 
-    <TextView
-        android:id="@+id/home_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Mwobwa"
-        android:textAppearance="@style/ColorTextStyle"
-        android:textSize="40sp"
-        android:gravity="center"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
-
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/home_netflix_rv"
         android:layout_width="match_parent"
-        android:layout_height="650dp"
-        app:layout_constraintTop_toBottomOf="@id/home_title"
-        android:layout_marginTop="20dp"/>
-
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constrainedHeight="true"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
