--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -37,6 +37,16 @@
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"/>
 
+    <ImageView
+        android:id="@+id/item_image_view"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@id/item_genre_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+
     <TextView
         android:id="@+id/item_title"
         android:layout_width="match_parent"
@@ -45,7 +55,7 @@
         android:textSize="15sp"
         android:textAppearance="@style/ColorTextStyle"
         android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@id/bottom_guideline"
+        app:layout_constraintTop_toBottomOf="@id/item_image_view"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="10dp"/>
 
