--- a/app/src/main/res/layout/activity_select.xml
+++ b/app/src/main/res/layout/activity_select.xml
@@ -26,7 +26,7 @@
         android:textAppearance="@style/ColorTextStyle"
         android:textSize="30sp"
         android:gravity="center"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="40dp"
         app:layout_constraintTop_toBottomOf="@id/select_top_text"/>
 
     <TextView
@@ -35,9 +35,9 @@
         android:layout_height="wrap_content"
         android:text="Netflix"
         android:textAppearance="@style/ColorTextStyle"
-        android:textSize="50sp"
+        android:textSize="30sp"
         android:gravity="center"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="50dp"
         app:layout_constraintTop_toBottomOf="@id/select_middle_text"/>
 
     <TextView
@@ -46,9 +46,9 @@
         android:layout_height="wrap_content"
         android:text="Disney"
         android:textAppearance="@style/ColorTextStyle"
-        android:textSize="50sp"
+        android:textSize="30sp"
         android:gravity="center"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/select_netflix"/>
 
     <TextView
@@ -57,23 +57,26 @@
         android:layout_height="wrap_content"
         android:text="Coupang"
         android:textAppearance="@style/ColorTextStyle"
-        android:textSize="50sp"
+        android:textSize="30sp"
         android:gravity="center"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/select_disney"/>
 
     <Button
         android:id="@+id/select_btn"
-        android:layout_width="150dp"
+        android:layout_width="100dp"
         android:layout_height="50dp"
         android:background="@drawable/bg_round_gray_10dp"
         android:text="확인"
         android:textAppearance="@style/BtnTextStyle"
         android:textSize="20sp"
+        android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@id/select_coupang"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:enabled="false"
+        android:visibility="invisible"/>
 
 
 
