--- a/app/src/main/res/layout/fragment_saved.xml
+++ b/app/src/main/res/layout/fragment_saved.xml
@@ -1,14 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.review.SavedFragment">
+    tools:context=".ui.saved.SavedFragment">
 
     <TextView
+        android:id="@+id/saved_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="리뷰"
-        android:textColor="@color/white"/>
+        android:layout_marginTop="20dp"
+        android:text="찜한 콘텐츠"
+        android:textAppearance="@style/ColorTextStyle"
+        android:textSize="20sp"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</FrameLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/saved_rv"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/saved_text" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
