--- a/app/src/main/res/layout/activity_select.xml
+++ b/app/src/main/res/layout/activity_select.xml
@@ -4,80 +4,78 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.select.SelectActivity"
-    android:background="@color/app_background_color">
+    android:background="@color/app_background_color"
+    tools:context=".ui.select.SelectActivity">
 
     <TextView
         android:id="@+id/select_top_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="70dp"
+        android:gravity="center"
         android:text="Mwobwa"
         android:textAppearance="@style/ColorTextStyle"
         android:textSize="70sp"
-        android:gravity="center"
-        android:layout_marginTop="70dp"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/select_middle_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:gravity="center"
         android:text="구독하고 계신 OTT 서비스를\n\n선택해 주세요"
         android:textAppearance="@style/ColorTextStyle"
         android:textSize="30sp"
-        android:gravity="center"
-        android:layout_marginTop="40dp"
-        app:layout_constraintTop_toBottomOf="@id/select_top_text"/>
+        app:layout_constraintTop_toBottomOf="@id/select_top_text" />
 
     <TextView
         android:id="@+id/select_netflix"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:gravity="center"
         android:text="Netflix"
         android:textAppearance="@style/ColorTextStyle"
         android:textSize="30sp"
-        android:gravity="center"
-        android:layout_marginTop="50dp"
-        app:layout_constraintTop_toBottomOf="@id/select_middle_text"/>
+        app:layout_constraintTop_toBottomOf="@id/select_middle_text" />
 
     <TextView
         android:id="@+id/select_disney"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
         android:text="Disney"
         android:textAppearance="@style/ColorTextStyle"
         android:textSize="30sp"
-        android:gravity="center"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/select_netflix"/>
+        app:layout_constraintTop_toBottomOf="@id/select_netflix" />
 
     <TextView
         android:id="@+id/select_coupang"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
         android:text="Coupang"
         android:textAppearance="@style/ColorTextStyle"
         android:textSize="30sp"
-        android:gravity="center"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/select_disney"/>
+        app:layout_constraintTop_toBottomOf="@id/select_disney" />
 
     <Button
         android:id="@+id/select_btn"
         android:layout_width="100dp"
         android:layout_height="50dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/bg_round_gray_10dp"
+        android:enabled="false"
         android:text="확인"
         android:textAppearance="@style/BtnTextStyle"
         android:textSize="20sp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@id/select_coupang"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:enabled="false"
-        android:visibility="invisible"/>
-
-
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/select_coupang" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
