--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.search.SearchFragment">
 
 
@@ -11,77 +11,76 @@
         android:id="@+id/search_edit_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/search_btn"
         android:backgroundTint="@color/white"
         android:ems="10"
+        android:hint="제목을 입력하세요."
         android:inputType="textPersonName"
-        android:text="" />
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        app:layout_constraintEnd_toStartOf="@id/search_btn"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/search_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:enabled="false"
         android:text="검색"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/search_edit_text"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/search_movie_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:text="영화"
         android:textAppearance="@style/ColorTextStyle"
         android:textSize="20sp"
-        android:layout_marginTop="10dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/search_edit_text"/>
+        app:layout_constraintTop_toBottomOf="@id/search_edit_text" />
 
     <View
         android:id="@+id/search_line1"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/white"
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/search_movie_text"/>
+        android:background="@color/white"
+        app:layout_constraintTop_toBottomOf="@id/search_movie_text" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/search_movie_rv"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/search_movie_text"/>
+        app:layout_constraintTop_toBottomOf="@id/search_movie_text" />
 
     <TextView
         android:id="@+id/search_tv_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:text="시리즈"
         android:textAppearance="@style/ColorTextStyle"
         android:textSize="20sp"
-        android:layout_marginTop="30dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/search_movie_rv"/>
+        app:layout_constraintTop_toBottomOf="@id/search_movie_rv" />
 
     <View
         android:id="@+id/search_line2"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/white"
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/search_tv_text"/>
+        android:background="@color/white"
+        app:layout_constraintTop_toBottomOf="@id/search_tv_text" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/search_tv_rv"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/search_tv_text"/>
-
-
-
-
-
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/search_tv_text" />
 </androidx.constraintlayout.widget.ConstraintLayout>
