--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -19,24 +19,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:ellipsize="end"
+        android:ems="10"
+        android:maxLines="1"
         android:text="제목"
         android:textAppearance="@style/ColorTextStyle"
         android:textSize="15sp"
-        android:ems="10"
-        android:maxLines="1"
-        android:ellipsize="end"
-        app:layout_constraintEnd_toStartOf="@id/item_search_score"
+        app:layout_constraintEnd_toStartOf="@id/item_search_info"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/item_search_image_view" />
 
-    <TextView
-        android:id="@+id/item_search_score"
+    <ImageView
+        android:id="@+id/item_search_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="평점"
-        android:textAppearance="@style/ColorTextStyle"
-        android:textSize="15sp"
+        android:src="@drawable/info_icon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/item_search_title"
         app:layout_constraintTop_toBottomOf="@id/item_search_image_view" />
