--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -15,7 +15,7 @@
 
     <TextView
         android:id="@+id/item_company_text"
-        android:layout_width="70dp"
+        android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:text="Netflix"
         android:textAppearance="@style/ColorTextStyle"
@@ -30,6 +30,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="장르"
+        android:ellipsize="end"
+        android:maxEms="15"
+        android:maxLines="1"
         android:textSize="15sp"
         android:textAppearance="@style/ColorTextStyle"
         app:layout_constraintEnd_toEndOf="parent"
